--- a/source/_posts/2023 新年快乐.md
+++ b/source/_posts/2023 新年快乐.md
@@ -1,11 +1,11 @@
 ---
-abbrlink: ''
+abbrlink: 2023NewYear
 categories: []
 comments: true
 date: '2023-01-21 20:03:01'
 tags: []
-title: ''
-updated: Sat, 25 Feb 2023 02:37:36 GMT
+title: 2023 新年快乐
+updated: Sat, 25 Feb 2023 04:33:09 GMT
 ---
 Happy Chinese New Year !
 
